Mejoras en sección About para pantallas pequeñas

--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,5 +1,5 @@
 footer {
-  background: #fff; /* Fondo blanco uniforme */
+  background-color: #f8f8f6;
   padding: 2rem 1rem;
   text-align: center;
   font-family: "Montserrat", sans-serif;
